[package]
name = "miner-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
anyhow = { version = "1.0.75"}
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
directories = "6.0.0"
zip = "0.6"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
chrono = { version = "0.4.41", features = ["serde"] }